--- a/Game/proj.win32/Game.vcxproj.filters
+++ b/Game/proj.win32/Game.vcxproj.filters
@@ -12,9 +12,15 @@
     <ClInclude Include="main.h">
       <Filter>win32</Filter>
     </ClInclude>
+    <ClInclude Include="Bitmap.h">
+      <Filter>win32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
+      <Filter>win32</Filter>
+    </ClCompile>
+    <ClCompile Include="Bitmap.cpp">
       <Filter>win32</Filter>
     </ClCompile>
   </ItemGroup>
