--- a/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="renderer\unkown">
       <UniqueIdentifier>{0bd4cd5e-2121-420b-b192-da2bd63a31ef}</UniqueIdentifier>
     </Filter>
+    <Filter Include="external\unzip">
+      <UniqueIdentifier>{8ae44480-d789-42c1-a57f-1d68948da573}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\renderer\Renderer.h">
@@ -111,6 +114,21 @@
     <ClInclude Include="..\renderer\GLProgram.h">
       <Filter>renderer\unkown</Filter>
     </ClInclude>
+    <ClInclude Include="..\platform\Image.h">
+      <Filter>platform</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\external\unzip\ioapi.h">
+      <Filter>external\unzip</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\external\unzip\ioapi_mem.h">
+      <Filter>external\unzip</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\external\unzip\unzip.h">
+      <Filter>external\unzip</Filter>
+    </ClInclude>
+    <ClInclude Include="..\renderer\Texture2D.h">
+      <Filter>renderer\unkown</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\renderer\Renderer.cpp">
@@ -153,6 +171,21 @@
       <Filter>renderer\unkown</Filter>
     </ClCompile>
     <ClCompile Include="..\renderer\GLProgram.cpp">
+      <Filter>renderer\unkown</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platform\Image.cpp">
+      <Filter>platform</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\external\unzip\ioapi.cpp">
+      <Filter>external\unzip</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\external\unzip\ioapi_mem.cpp">
+      <Filter>external\unzip</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\external\unzip\unzip.cpp">
+      <Filter>external\unzip</Filter>
+    </ClCompile>
+    <ClCompile Include="..\renderer\Texture2D.cpp">
       <Filter>renderer\unkown</Filter>
     </ClCompile>
   </ItemGroup>
