--- a/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
@@ -129,6 +129,15 @@
     <ClInclude Include="..\renderer\Texture2D.h">
       <Filter>renderer\unkown</Filter>
     </ClInclude>
+    <ClInclude Include="..\math\Geometry.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\Vec2.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\MathUtil.h">
+      <Filter>math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\renderer\Renderer.cpp">
@@ -188,9 +197,27 @@
     <ClCompile Include="..\renderer\Texture2D.cpp">
       <Filter>renderer\unkown</Filter>
     </ClCompile>
+    <ClCompile Include="..\math\Geometry.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\Vec2.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\MathUtil.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\math\Mat4.inl">
+      <Filter>math</Filter>
+    </None>
+    <None Include="..\math\Vec2.inl">
+      <Filter>math</Filter>
+    </None>
+    <None Include="..\math\Vec3.inl">
+      <Filter>math</Filter>
+    </None>
+    <None Include="..\math\MathUtil.inl">
       <Filter>math</Filter>
     </None>
   </ItemGroup>
